# participation_rate

./: .env  .gitignore  Cargo.toml  Dockerfile  README.md  docker-compose-db.yaml  docker-compose.yml
src/: client.rs  main.rs  model.rs
src/client/: APIClient.rs  APIServer.rs  BlockDataModel.rs  apiclient.rs  apiserver.rs
src/model/: CommitteeSet.rs  GenesisResponse.rs  ValidatorDataResponse.rs  ValidatorResponse.rs  ValidatorSet.rs  committee_response_data.rs  committee_set.rs  validator_data.rs  validator_response.rs
