[package]
name = "participation_rate"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "participation_rate"
path = "src/main.rs"

[dependencies]
reqwest = { version = "0.11", features = ["blocking","json"] }
serde = { version = "1.0", features = ["derive"] }
tokio = { version = "1.12.0", features = ["full"] } # for our async runtime
hex = "0.4"
mysql = "*"
actix-web = "3.3"
warp = "0.3"
dotenv = "0.15.0"
mime = "0.3.0"